[gd_scene load_steps=18 format=3 uid="uid://bl1i5sdlyg2ap"]

[ext_resource type="Script" path="res://src/character_control/character_controller.gd" id="1_ign4w"]
[ext_resource type="PackedScene" uid="uid://2l7wqwga4v1k" path="res://scenes/character/pidgeon.tscn" id="2_if5av"]
[ext_resource type="Script" path="res://scenes/StaminaBarController.gd" id="3_b6mk4"]
[ext_resource type="Script" path="res://src/character_control/character_camera.gd" id="3_m6e8c"]
[ext_resource type="PackedScene" uid="uid://cqw7msc16yh2k" path="res://scenes/ui/stamina_indicator.tscn" id="4_84q0i"]
[ext_resource type="Script" path="res://src/ui/velocityIndicator.gd" id="5_ma7fi"]
[ext_resource type="AudioStream" uid="uid://csp8podyk6fh" path="res://data/sounds/flap_1.wav" id="7_epl0v"]
[ext_resource type="Script" path="res://src/character_control/character_audio.gd" id="8_u1mel"]
[ext_resource type="AudioStream" uid="uid://ddj6bl0yk4li7" path="res://data/sounds/fly_wind_looped.wav" id="9_5xvu8"]
[ext_resource type="AudioStream" uid="uid://d0sio2e5rfg0h" path="res://data/sounds/flap_2.wav" id="9_eluxm"]
[ext_resource type="AudioStream" uid="uid://b7mn2ynb3r1ae" path="res://data/sounds/ambient_wind_looped.wav" id="10_gyd1x"]
[ext_resource type="AudioStream" uid="uid://dcql4xf5vaplo" path="res://data/sounds/flap_3.wav" id="10_w6rmh"]
[ext_resource type="AudioStream" uid="uid://bvdt8m831q4ni" path="res://data/sounds/flap_4.wav" id="11_cdls3"]
[ext_resource type="AudioStream" uid="uid://cajklpiwfjofn" path="res://data/sounds/splash.ogg" id="12_g5lcg"]
[ext_resource type="AudioStream" uid="uid://cfcgooawsj8xr" path="res://data/sounds/splat.wav" id="13_ioni6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_h0wee"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4tihx"]
radius = 0.1

[node name="character_controller" type="CharacterBody3D"]
script = ExtResource("1_ign4w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_h0wee")

[node name="pidgeon" parent="." instance=ExtResource("2_if5av")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2, 4)
current = true
fov = 60.0
script = ExtResource("3_m6e8c")

[node name="StaminaIndicator" parent="." instance=ExtResource("4_84q0i")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.0
offset_top = -73.0
offset_right = -286.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_b6mk4")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 95.0
offset_top = -25.0
offset_right = 248.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scroll_active = false
script = ExtResource("5_ma7fi")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.878641, -0.083561)
enabled = false
shape = SubResource("SphereShape3D_4tihx")
target_position = Vector3(0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_epl0v")
mix_target = 2

[node name="CharacterAudio" type="Node" parent="."]
script = ExtResource("8_u1mel")
flaps = Array[AudioStream]([ExtResource("7_epl0v"), ExtResource("9_eluxm"), ExtResource("10_w6rmh"), ExtResource("11_cdls3")])
water_splashes = Array[AudioStream]([ExtResource("12_g5lcg")])
solid_splashes = Array[AudioStream]([ExtResource("13_ioni6")])

[node name="fly_wind" type="AudioStreamPlayer" parent="CharacterAudio"]
stream = ExtResource("9_5xvu8")

[node name="ambient_wind" type="AudioStreamPlayer" parent="CharacterAudio"]
stream = ExtResource("10_gyd1x")
volume_db = -10.0

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="flap" from="." to="CharacterAudio" method="_on_character_controller_flap"]
[connection signal="solid_hit" from="." to="CharacterAudio" method="_on_character_controller_solid_hit"]
[connection signal="water_hit" from="." to="CharacterAudio" method="_on_character_controller_water_hit"]
